fix(head): align overlap cards to designs

--- a/applications/head/src/components/styles/OverlapCards.module.scss
+++ b/applications/head/src/components/styles/OverlapCards.module.scss
@@ -1,7 +1,7 @@
 @import "@bmi/styles";
 
 .OverlapCards {
-  margin-top: 60px;
+  margin-top: -70px;
 
   @media (min-width: $breakpoint-sm) {
     margin-top: -112px;
